# hebi_hexapod

hebihexapod_description/: CMakeLists.txt  package.xml
hebihexapod_description/launch/: load_urdf_onto_ros_param_server.launch
hebihexapod_description/meshes/: a_2038_02_21z_prt.stl  a_2038_02_22z_prt.stl  a_2038_02_28z_prt.stl  a_2038_02_29z_prt.stl  a_2038_02_40z_prt.stl  a_2038_02_41z_prt.stl  a_2038_02_49z_prt.stl  a_2038_02_50z_prt.stl  a_2038_02_61z_prt.stl  a_2038_02_62z_prt.stl  a_2038_02_68z_prt.stl  a_2038_02_69z_prt.stl  a_2039_02_12z_prt.stl  a_2039_02_13z_prt.stl  a_2039_02_19z_prt.stl  a_2039_02_2z_prt.stl  a_2039_02_30z_prt.stl  a_2039_02_38z_prt.stl  a_2039_02_51z_prt.stl  a_2039_02_59z_prt.stl  a_2039_02_70z_prt.stl  a_2039_02_8z_prt.stl  a_2070_01l_27z_prt.stl  a_2070_01l_48z_prt.stl  a_2070_01l_67z_prt.stl  a_2070_01r_23z_prt.stl  a_2070_01r_42z_prt.stl  a_2070_01r_63z_prt.stl  a_2095_01_6z_prt.stl  hebi_x5_4_16z_prt.stl  hebi_x5_4_24z_prt.stl  hebi_x5_4_31z_prt.stl  hebi_x5_4_32z_prt.stl  hebi_x5_4_35z_prt.stl  hebi_x5_4_43z_prt.stl  hebi_x5_4_52z_prt.stl  hebi_x5_4_53z_prt.stl  hebi_x5_4_56z_prt.stl  hebi_x5_4_64z_prt.stl  hebi_x5_4_71z_prt.stl  (+31 more)
hebihexapod_description/msg/: LegCmd.msg
hebihexapod_description/src/: hexapod_leg_fsm_node.py  hexapod_move_base_creep_gait_fsm_node.py  hexapod_move_base_tripod_gait_fsm_node.py  hexapod_move_base_tripod_gait_transform.py  keystroke_to_cmd_vel.py  run_hebi_hexapod.py
hebihexapod_description/src/common_states/: breakpoint.py  check_if_twist_msg_is_zero.py  check_ros_topic_for_new_msg.py  get_static_transforms_from_urdf_str.py  get_transform_matrix_from_twist_msg.py  get_urdf_str_from_parameter_server.py  switch.py  toggle.py
hebihexapod_description/src/hexapod_leg_states/: move_to_joint_state.py  push.py  step.py  wait_for_master.py
hebihexapod_description/src/hexapod_move_base_states/: get_leg_eff_pos_targets_from_translations.py  get_leg_eff_translations.py  send_leg_cmds_and_wait.py  set_target_joint_states.py  transformations.py
hebihexapod_description/src/scratch/: calc_moments_of_inertia.py  test_calc_moments_of_inertia.py
hebihexapod_description/urdf/: hebihexapod_01_a_rough.urdf  hebihexapod_01_b_boilerplate_motor_plugins.urdf  hebihexapod_01_c_force_sensors.urdf  openmeta_generated_hexapod.urdf
hebihexapod_gazebo/: CMakeLists.txt  package.xml
hebihexapod_gazebo/launch/: hebihexapod_01_a_spawn_model.launch  hebihexapod_01_b_spawn_model.launch  hebihexapod_01_c_spawn_model.launch  run_hebi_hexapod.launch  run_hebi_hexapod_creep_gait_fsm.launch  run_hebi_hexapod_tripod_gait_fsm.launch  run_hebi_hexapod_tripod_gait_high_step_fsm.launch  spawn_urdf_in_gazebo.launch
hebihexapod_gazebo/launch/test/: hebi_hexapod_fsm_1_leg.launch  hebi_hexapod_fsm_2_leg.launch
hebihexapod_gazebo/src/: gazebo_transport_to_ros_topic.cpp
