<?xml version="1.0"?>
<package format="2">
  <name>hebihexapod_gazebo</name>
  <version>0.0.0</version>
  <description>The hebihexapod_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jcoombe@metamorphsoftware.com">Joseph Coombe</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://www.metamorphsoftware.com/</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="jcoombe@metamorphsoftware.com">Joseph Coombe</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>drivebot_description</exec_depend>
  <exec_depend>smach_viewer</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
